2010-08-31  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=40947
        <rdar://problem/8124723> REGRESSION (r57544): XMLHttpRequest POSTed multipart/form-data
        wrongfully gets a charset appended

        * http/tests/xmlhttprequest/access-control-basic-whitelist-request-headers-expected.txt:
        * http/tests/xmlhttprequest/request-encoding2.html:
        Updated tests that has wrong expectations.

        * http/tests/xmlhttprequest/post-with-boundary-expected.txt: Added.
        * http/tests/xmlhttprequest/post-with-boundary.html: Added.
        Added a new test, sending a valid multipart form with boundary.
2010-08-31  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=40947
        <rdar://problem/8124723> REGRESSION (r57544): XMLHttpRequest POSTed multipart/form-data
        wrongfully gets a charset appended

        Test: http/tests/xmlhttprequest/post-with-boundary.html

        * xml/XMLHttpRequest.cpp:
        (WebCore::replaceCharsetInMediaType): Changed to only set charset if it was already present,
        and never append.
        (WebCore::XMLHttpRequest::send): Updated for replaceCharsetInMediaType renaming.

Canonical link: https://commits.webkit.org/57328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66568 268f45cc-cd09-0410-ab3c-d52691b4dbfc